# MacroX

./: .gitignore  index.html  package-lock.json  package.json  run_macrox.bat  tailwind.config.js
.github/workflows/: release.yml
config/: settings.json
config/languages/: en.json  fr.json
scripts/: updater.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: ai_instructions.txt  settings.json
src-tauri/config/languages/: en.json  fr.json
src-tauri/config/profiles/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  hook.rs  main.rs  models.rs  persistence.rs
src/components/: Dashboard.tsx  DeviceMapper.tsx  ErrorBoundary.tsx  KeyboardData.ts  MacroEditor.tsx  Mouse.tsx  Settings.tsx  ToastContainer.tsx  VisualKeyboard.tsx  index.ts
src/store/: useStore.ts
src/utils/: keyboardLayouts.ts
