[package]
name = "macrox"
version = "0.1.0"
description = "A universal remapping and macro application for HID devices."
authors = ["MacroX Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rdev = { version = "0.5", features = ["unstable_grab"] }
enigo = "0.1"
directories = "5.0"
base64 = "0.21"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
sysinfo = "0.30"
open = "5.0"
notify = "6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
